--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>
-      A simple Editor Timeline by
+      A simple Video Timeline by
       <a target="_blank" href="https://github.com/iamajraj/">github/iamajraj</a>
     </h1>
     <p class="instructions">
